--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -24,17 +24,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.16/mediaelementplayer.min.css">
 <!-- MediaElement.js JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.16/mediaelement-and-player.min.js"></script>
-<<<<<<< HEAD
-<!-- <style>
-=======
 <style>
->>>>>>> bb671ad571b98f86528f5df689dd3f62e40e088b
 .mejs-container {
     max-width: 100%;
     height: auto;
     margin: auto;
 }
-</style> -->
+</style>
 </head>
 
 <body>
