Fix landing.html content

--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -12,6 +12,7 @@
 
     {% include 'partials/head_c.html' %}
     
+    <link rel="stylesheet" href="/static/landing/landing_style.css" />
 
   <link rel="stylesheet" href="{% static 'landing/landing_style.css' %}" />
   <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
