--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -331,11 +331,13 @@
                     <div class="slide">
                         <div class="Placeholder-mob">
 
-                            <video id="tiktok-video-1"
-                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
-                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
-                                <source src="{% static 'videos/tiktok/tiktok1.mp4' %}" type="video/mp4" />
-                            </video>
+                          <video 
+                          class="video-js vjs-default-skin lazy" 
+                          controls 
+                          preload="none" 
+                          data-src="{% static 'videos/tiktok/tiktok1.mp4' %}">
+                        </video>
+                        
 
 
 
@@ -344,22 +346,25 @@
                     </div>
                     <div class="slide">
                         <div class="Placeholder-mob">
-                            <video id="tiktok-video-2"
-                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
-                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
-                                <source src="{% static 'videos/tiktok/tiktok2.mp4' %}" type="video/mp4" />
-                            </video>
+                          <video 
+                          class="video-js vjs-default-skin lazy" 
+                          controls 
+                          preload="none" 
+                          data-src="{% static 'videos/tiktok/tiktok1.mp4' %}">
+                        </video>
+                        
 
 
                         </div>
                     </div>
                     <div class="slide">
-                        <div class="Placeholder-mob">
-                            <video id="tiktok-video-3"
-                                class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
-                                preload="auto" data-setup='{ "fluid" : true }' width="100%">
-                                <source src="{% static 'videos/tiktok/tiktok3.mp4' %}" type="video/mp4" />
-                            </video>
+                      <video 
+                      class="video-js vjs-default-skin lazy" 
+                      controls 
+                      preload="none" 
+                      data-src="{% static 'videos/tiktok/tiktok1.mp4' %}">
+                    </video>
+                    
                         </div>
                     </div>
                 </div>
