--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -477,7 +477,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">1. Pick Video Dimensions:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Select the format that fits your platform:
           </div>
           <div class="dimensions-container">
@@ -495,7 +495,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">2. Add AI Voiceover:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Paste your API key and voice ID, and let AI create realistic, human-like voiceovers—no robotic
             tones here.
           </div>
@@ -508,7 +508,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">3. Upload Your Script:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Simply upload your script, then highlight the words you want to pair with video clips.
           </div>
         </div>
@@ -520,7 +520,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">4. Build Your Asset Library:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Organize your clips into folders for easy reuse across multiple projects.
           </div>
         </div>
@@ -532,7 +532,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">5. Match Clips To Script:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Highlight text, select a clip, and let VideoCrafter handle cropping, syncing, and alignment.
           </div>
         </div>
@@ -544,7 +544,7 @@
         <div class="hiw-element-text-container">
           <div class="hiw-element-heading">6. Add Background Music:</div>
           <div class="hiw-element-text">
-            <!-- <img src="{% static 'assets/icons/check.svg' %}" alt="" /> -->
+            <i class="fa-solid fa-check"></i>
             Upload your favorite MP3 tracks, set start/end points, and adjust volume for the perfect vibe.
           </div>
         </div>
