--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -157,7 +157,7 @@
       <div class="grid-container">
         <div class="grid-item">
 
-          <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+          <video src="/static/videos/tiktok/tiktok1.mp4" class="tiktok-video" controls></video>
         </div>
         <div class="grid-item">
 
