--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -241,7 +241,7 @@
           <div class="slides">
             <div class="slide">
               <div class="Placeholder">
-                <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+                <video src="/static/videos/tiktok/tiktok1.mp4" class="tiktok-video" controls></video>
               </div>
             </div>
             <div class="slide">
@@ -334,7 +334,7 @@
 
               <video id="tiktok-video-1" class="video-js vjs-default-skin vjs-big-play-centered tiktok-video" controls
                 preload="auto" data-setup='{ "fluid" : true }' width="100%">
-                <source src="{% static 'videos/tiktok/tiktok1.mp4' %}" type="video/mp4" />
+                <source src="/static/videos/tiktok/tiktok1.mp4" type="video/mp4" />
               </video>
 
 
