--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -157,14 +157,7 @@
       <div class="grid-container">
         <div class="grid-item">
 
-          <!-- <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video> -->
-          <div class="video-container">
-            <video class="tiktok-video" controls preload="auto" poster="https://images.unsplash.com/photo-1595859156926-36335e413920?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRodW1ibmFpbHxlbnwwfHwwfHx8MA%3D%3D">
-                <source src="{% static 'videos/tiktok/tiktok1.mp4' %}" type="video/mp4" />
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        
+          <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
         </div>
         <div class="grid-item">
 
