--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -16,6 +16,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="{% static 'landing/landing_style.css' %}" />
+  <link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
 
   <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
   <script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
